--- a/01-cfn-vpc.yaml
+++ b/01-cfn-vpc.yaml
@@ -48,7 +48,7 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties: 
       VpcId: !Ref VPC
-      CidrBlock: !Select [0, !Cidr [!Ref VpcCidrBlock, 8, 2]]
+      CidrBlock: !Select [0, !Cidr [!Ref VpcCidrBlock, 8,13]]
       MapPublicIpOnLaunch: true
       AvailabilityZone: !Select [0, !GetAZs ""]
 
@@ -56,7 +56,7 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties: 
       VpcId: !Ref VPC
-      CidrBlock: !Select [1, !Cidr [!Ref VpcCidrBlock, 8, 2]]
+      CidrBlock: !Select [1, !Cidr [!Ref VpcCidrBlock, 8, 13]]
       MapPublicIpOnLaunch: true
       AvailabilityZone: !Select [1, !GetAZs ""]
 
@@ -81,14 +81,14 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties: 
       VpcId: !Ref VPC
-      CidrBlock: !Select [2, !Cidr [!Ref VpcCidrBlock, 8, 2]]
+      CidrBlock: !Select [2, !Cidr [!Ref VpcCidrBlock, 8, 13]]
       AvailabilityZone: !Select [0, !GetAZs ""]
 
   PrivateSubnet2:
     Type: AWS::EC2::Subnet
     Properties: 
       VpcId: !Ref VPC
-      CidrBlock: !Select [3, !Cidr [!Ref VpcCidrBlock, 8, 2]]
+      CidrBlock: !Select [3, !Cidr [!Ref VpcCidrBlock, 8, 13]]
       AvailabilityZone: !Select [1, !GetAZs ""]
 
   # Public Route Table
