--- a/01-cfn-vpc.yaml
+++ b/01-cfn-vpc.yaml
@@ -14,7 +14,7 @@ Parameters:
 
   VpcName:
     Type: String
-    Default: "OpsVPC"
+    Default: "WorkshopVPC"
     Description: "Name of the VPC."
 
 Resources:
@@ -50,7 +50,7 @@ Resources:
       VpcId: !Ref VPC
       CidrBlock: !Select [0, !Cidr [!Ref VpcCidrBlock, 8,13]]
       MapPublicIpOnLaunch: true
-      AvailabilityZone: !Select [0, !GetAZs ""]
+      AvailabilityZone: us-east-1a
       Tags:
         - Key: Name
           Value: "Workshop Public Subnet 1"
@@ -61,7 +61,7 @@ Resources:
       VpcId: !Ref VPC
       CidrBlock: !Select [1, !Cidr [!Ref VpcCidrBlock, 8, 13]]
       MapPublicIpOnLaunch: true
-      AvailabilityZone: !Select [1, !GetAZs ""]
+      AvailabilityZone: us-east-1b
       Tags:
         - Key: Name
           Value: "Workshop Public Subnet 2"
@@ -88,7 +88,7 @@ Resources:
     Properties: 
       VpcId: !Ref VPC
       CidrBlock: !Select [2, !Cidr [!Ref VpcCidrBlock, 8, 13]]
-      AvailabilityZone: !Select [0, !GetAZs ""]
+      AvailabilityZone: us-east-1a
       Tags:
         - Key: Name
           Value: "Workshop Private Subnet 1"
@@ -98,7 +98,7 @@ Resources:
     Properties: 
       VpcId: !Ref VPC
       CidrBlock: !Select [3, !Cidr [!Ref VpcCidrBlock, 8, 13]]
-      AvailabilityZone: !Select [1, !GetAZs ""]
+      AvailabilityZone: us-east-1b
       Tags:
         - Key: Name
           Value: "Workshop Private Subnet 2"
