--- a/02-cfn-corrected.yaml
+++ b/02-cfn-corrected.yaml
@@ -1,15 +1,67 @@
-Resources:
+AWSTemplateFormatVersion: '2010-09-09'
+Description: >
+  AWS CloudFormation template to deploy an EKS cluster using two private subnets,
+  a private control plane endpoint, recommended security groups, an S3 bucket with best practices
+  for data storage, EKS add-ons (CoreDNS, VPC CNI, kube-proxy), and VPC creation with specified
+  Availability Zones.
 
-  # VPC
-  WorkshopVPC:
+Parameters:
+  ClusterName:
+    Type: String
+    Description: The name of the EKS cluster.
+    Default: my-eks-cluster
+
+  KubernetesVersion:
+    Type: String
+    Description: Kubernetes version for the EKS cluster.
+    Default: '1.24'
+
+  VpcCidrBlock:
+    Type: String
+    Description: CIDR block for the VPC.
+    Default: '10.0.0.0/16'
+
+  VpcName:
+    Type: String
+    Description: Name of the VPC.
+    Default: 'my-vpc'
+
+  NodeGroupDesiredCapacity:
+    Type: Number
+    Description: Desired capacity of the node group.
+    Default: 2
+
+  NodeGroupMinSize:
+    Type: Number
+    Description: Minimum size of the node group.
+    Default: 1
+
+  NodeGroupMaxSize:
+    Type: Number
+    Description: Maximum size of the node group.
+    Default: 4
+
+  AvailabilityZone1:
+    Type: AWS::EC2::AvailabilityZone::Name
+    Description: The first Availability Zone to use for subnets.
+    Default: !Select [0, !GetAZs '']
+
+  AvailabilityZone2:
+    Type: AWS::EC2::AvailabilityZone::Name
+    Description: The second Availability Zone to use for subnets.
+    Default: !Select [1, !GetAZs '']
+
+Resources:
+  # VPC Creation
+  VPC:
     Type: AWS::EC2::VPC
     Properties:
-      CidrBlock: 10.0.0.0/16
-      EnableDnsHostnames: true
+      CidrBlock: !Ref VpcCidrBlock
       EnableDnsSupport: true
+      EnableDnsHostnames: true
       Tags:
         - Key: Name
-          Value: WorkshopVPC
+          Value: !Ref VpcName
 
   # Internet Gateway
   InternetGateway:
@@ -17,147 +69,412 @@ Resources:
     Properties:
       Tags:
         - Key: Name
-          Value: WorkshopInternetGateway
+          Value: !Sub "IGW_${VpcName}"
 
-  # Attach Internet Gateway to VPC
   AttachGateway:
     Type: AWS::EC2::VPCGatewayAttachment
     Properties:
-      VpcId: !Ref WorkshopVPC
+      VpcId: !Ref VPC
       InternetGatewayId: !Ref InternetGateway
 
-  # Public Subnet
+  # Public Subnets
   PublicSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
-      VpcId: !Ref WorkshopVPC
-      CidrBlock: 10.0.1.0/24
+      VpcId: !Ref VPC
+      CidrBlock: !Select [0, !Cidr [!Ref VpcCidrBlock, 8,13]]
       MapPublicIpOnLaunch: true
-      AvailabilityZone: us-east-1a
+      AvailabilityZone: !Ref AvailabilityZone1
       Tags:
         - Key: Name
-          Value: WorkshopPublicSubnet
+          Value: "Public Subnet 1"
+
   PublicSubnet2:
     Type: AWS::EC2::Subnet
     Properties:
-      VpcId: !Ref WorkshopVPC
-      CidrBlock: 10.0.2.0/24
+      VpcId: !Ref VPC
+      CidrBlock: !Select [1, !Cidr [!Ref VpcCidrBlock, 8,13]]
       MapPublicIpOnLaunch: true
-      AvailabilityZone: us-east-1b
+      AvailabilityZone: !Ref AvailabilityZone2
       Tags:
         - Key: Name
-          Value: WorkshopPublicSubnet
+          Value: "Public Subnet 2"
+
+  # NAT Gateway Elastic IP
+  NatGatewayEIP:
+    Type: AWS::EC2::EIP
+    Properties:
+      Domain: vpc
+
+  # NAT Gateway
+  NatGateway:
+    Type: AWS::EC2::NatGateway
+    Properties:
+      AllocationId: !GetAtt NatGatewayEIP.AllocationId
+      SubnetId: !Ref PublicSubnet1
+      Tags:
+        - Key: Name
+          Value: !Sub "NAT_${VpcName}"
+
+  # Private Subnets
+  PrivateSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: !Select [2, !Cidr [!Ref VpcCidrBlock, 8,13]]
+      AvailabilityZone: !Ref AvailabilityZone1
+      Tags:
+        - Key: Name
+          Value: "Private Subnet 1"
+
+  PrivateSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: !Select [3, !Cidr [!Ref VpcCidrBlock, 8,13]]
+      AvailabilityZone: !Ref AvailabilityZone2
+      Tags:
+        - Key: Name
+          Value: "Private Subnet 2"
 
   # Public Route Table
   PublicRouteTable:
     Type: AWS::EC2::RouteTable
     Properties:
-      VpcId: !Ref WorkshopVPC
+      VpcId: !Ref VPC
       Tags:
         - Key: Name
-          Value: PublicRouteTable
+          Value: !Sub "PublicRouteTable_${VpcName}"
 
-  # Route from Public Route Table to Internet Gateway
   PublicRoute:
     Type: AWS::EC2::Route
     Properties:
       RouteTableId: !Ref PublicRouteTable
-      DestinationCidrBlock: 0.0.0.0/0
+      DestinationCidrBlock: "0.0.0.0/0"
       GatewayId: !Ref InternetGateway
 
-  # Associate Public Subnet 1 with Public Route Table
-  PublicSubnet1RouteTableAssociation:
+  PublicSubnetRouteTableAssociation1:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref PublicSubnet1
       RouteTableId: !Ref PublicRouteTable
 
-  # Associate Public Subnet 2 with Public Route Table
-  PublicSubnet2RouteTableAssociation:
+  PublicSubnetRouteTableAssociation2:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref PublicSubnet2
       RouteTableId: !Ref PublicRouteTable
 
-  # EKS Cluster (with outdated version)
-  EKSCluster:
-    Type: AWS::EKS::Cluster
+  # Private Route Table
+  PrivateRouteTable:
+    Type: AWS::EC2::RouteTable
     Properties:
-      Name: poorly-optimized-eks-cluster
-      RoleArn: !GetAtt EKSClusterRole.Arn
-      ResourcesVpcConfig:
-        SubnetIds:
-          - !Ref PublicSubnet1
-          - !Ref PublicSubnet2
-        SecurityGroupIds:
-          - !Ref EKSSecurityGroup
-      Version: '1.28' # Outdated version of Kubernetes (current version is 1.30)
+      VpcId: !Ref VPC
       Tags:
         - Key: Name
-          Value: PoorlyOptimizedEKSCluster
-  # EKS Cluster Role (over-privileged)
+          Value: !Sub "PrivateRouteTable_${VpcName}"
+
+  PrivateRoute:
+    Type: AWS::EC2::Route
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable
+      DestinationCidrBlock: "0.0.0.0/0"
+      NatGatewayId: !Ref NatGateway
+
+  PrivateSubnetRouteTableAssociation1:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnet1
+      RouteTableId: !Ref PrivateRouteTable
+
+  PrivateSubnetRouteTableAssociation2:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnet2
+      RouteTableId: !Ref PrivateRouteTable
+
+  # S3 VPC Endpoint for Private Subnets
+  S3VPCEndpoint:
+    Type: AWS::EC2::VPCEndpoint
+    Properties:
+      VpcId: !Ref VPC
+      ServiceName: !Sub "com.amazonaws.${AWS::Region}.s3"
+      RouteTableIds:
+        - !Ref PrivateRouteTable
+      VpcEndpointType: Gateway
+
+  # Security Group for the EKS Cluster Control Plane
+  ClusterControlPlaneSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Security group for EKS cluster control plane communication with worker nodes
+      VpcId: !Ref VPC
+      Tags:
+        - Key: Name
+          Value: !Sub '${ClusterName}-control-plane-sg'
+
+  # Security Group for Worker Nodes
+  NodeSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Security group for EKS worker nodes
+      VpcId: !Ref VPC
+      Tags:
+        - Key: Name
+          Value: !Sub '${ClusterName}-node-sg'
+
+  # Ingress and Egress Rules for Security Groups
+
+  # Control Plane to Node Communication
+  ControlPlaneToNodeIngressTCP:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      Description: Allow control plane to communicate with worker nodes (TCP 1025-65535)
+      GroupId: !Ref NodeSecurityGroup
+      IpProtocol: tcp
+      FromPort: 1025
+      ToPort: 65535
+      SourceSecurityGroupId: !Ref ClusterControlPlaneSecurityGroup
+
+  ControlPlaneToNodeIngressUDP:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      Description: Allow control plane to communicate with worker nodes (UDP 1025-65535)
+      GroupId: !Ref NodeSecurityGroup
+      IpProtocol: udp
+      FromPort: 1025
+      ToPort: 65535
+      SourceSecurityGroupId: !Ref ClusterControlPlaneSecurityGroup
+
+  ControlPlaneToNodeIngressICMP:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      Description: Allow control plane to communicate with worker nodes (ICMP)
+      GroupId: !Ref NodeSecurityGroup
+      IpProtocol: icmp
+      FromPort: -1
+      ToPort: -1
+      SourceSecurityGroupId: !Ref ClusterControlPlaneSecurityGroup
+
+  # Node to Control Plane Communication
+  NodeToControlPlaneEgress:
+    Type: AWS::EC2::SecurityGroupEgress
+    Properties:
+      Description: Allow worker nodes to communicate with the control plane (TCP 443)
+      GroupId: !Ref NodeSecurityGroup
+      IpProtocol: tcp
+      FromPort: 443
+      ToPort: 443
+      DestinationSecurityGroupId: !Ref ClusterControlPlaneSecurityGroup
+
+  # Inter-Node Communication (Optional)
+  NodeToNodeIngress:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      Description: Allow worker nodes to communicate with each other (All traffic)
+      GroupId: !Ref NodeSecurityGroup
+      IpProtocol: -1
+      FromPort: -1
+      ToPort: -1
+      SourceSecurityGroupId: !Ref NodeSecurityGroup
+
+  # EKS Cluster Role
   EKSClusterRole:
     Type: AWS::IAM::Role
     Properties:
+      RoleName: !Sub '${ClusterName}-eks-cluster-role'
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
           - Effect: Allow
             Principal:
-              Service: eks.amazonaws.com
-            Action: sts:AssumeRole
+              Service: 'eks.amazonaws.com'
+            Action: 'sts:AssumeRole'
       ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/AdministratorAccess # Over-privileged
+        - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
+        - arn:aws:iam::aws:policy/AmazonEKSVPCResourceController
 
-  # EKS NodeGroup Instance Role (minimal security)
-  EKSNodeInstanceRole:
+  # EKS Cluster
+  EKSCluster:
+    Type: AWS::EKS::Cluster
+    Properties:
+      Name: !Ref ClusterName
+      Version: !Ref KubernetesVersion
+      RoleArn: !GetAtt EKSClusterRole.Arn
+      ResourcesVpcConfig:
+        SubnetIds:
+          - !Ref PrivateSubnet1
+          - !Ref PrivateSubnet2
+        SecurityGroupIds:
+          - !Ref ClusterControlPlaneSecurityGroup
+        EndpointPublicAccess: false  # Control plane endpoint is private
+        EndpointPrivateAccess: true  # Enable private access to the control plane
+        PublicAccessCidrs: []        # Ensure no CIDRs are allowed for public access
+
+  # Node Group Role
+  NodeInstanceRole:
     Type: AWS::IAM::Role
     Properties:
+      RoleName: !Sub '${ClusterName}-node-instance-role'
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
           - Effect: Allow
             Principal:
-              Service: ec2.amazonaws.com
-            Action: sts:AssumeRole
+              Service:
+                - ec2.amazonaws.com
+              Action: 'sts:AssumeRole'
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
         - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
-        - arn:aws:iam::aws:policy/AdministratorAccess # Over-privileged
+        - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
 
-  # EKS Security Group (Minimal security rules)
-  EKSSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
+  # Launch Template for Node Group
+  NodeLaunchTemplate:
+    Type: AWS::EC2::LaunchTemplate
     Properties:
-      GroupDescription: EKS Cluster Security Group
-      VpcId: !Ref WorkshopVPC
-      SecurityGroupIngress:
-        - IpProtocol: -1
-          CidrIp: 0.0.0.0/0
+      LaunchTemplateName: !Sub '${ClusterName}-launch-template'
+      LaunchTemplateData:
+        SecurityGroupIds:
+          - !Ref NodeSecurityGroup
+        TagSpecifications:
+          - ResourceType: instance
+            Tags:
+              - Key: Name
+                Value: !Sub '${ClusterName}-node'
+              - Key: eks:cluster-name
+                Value: !Ref ClusterName
 
-  # EKS NodeGroup (Small and poorly configured nodes)
-  EKSNodeGroup:
+  # EKS Managed Node Group
+  NodeGroup:
     Type: AWS::EKS::Nodegroup
     Properties:
       ClusterName: !Ref EKSCluster
-      NodeRole: !GetAtt EKSNodeInstanceRole.Arn
-      Subnets:
-        - !Ref PublicSubnet1
-        - !Ref PublicSubnet2
+      NodegroupName: !Sub '${ClusterName}-nodegroup'
       ScalingConfig:
-        DesiredSize: 1
-        MinSize: 1
-        MaxSize: 2 # Limited scalability
-      InstanceTypes:
-        - t3.medium
-        # Not suited for production workloads
-      DiskSize: 20 # Insufficient for most workloads
+        MinSize: !Ref NodeGroupMinSize
+        DesiredSize: !Ref NodeGroupDesiredCapacity
+        MaxSize: !Ref NodeGroupMaxSize
+      Subnets:
+        - !Ref PrivateSubnet1
+        - !Ref PrivateSubnet2
+      NodeRole: !GetAtt NodeInstanceRole.Arn
+      LaunchTemplate:
+        Name: !Ref NodeLaunchTemplate
+        Version: '$Latest'
+      ReleaseVersion: '1.29.6-20240910'
+      CapacityType: ON_DEMAND
+      Tags:
+        Name: !Sub '${ClusterName}-nodegroup'
 
   # S3 Bucket for Data Storage (Simulate production environment)
   S3Bucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: poorly-optimized-eks-bucket
+      BucketName: !Sub 'poorly-optimized-eks-bucket-${AWS::AccountId}-${AWS::Region}'
+      VersioningConfiguration:
+        Status: Enabled
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: AES256
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
       Tags:
         - Key: Name
-          Value: OptimizedEKSBucket
+          Value: !Sub 'PoorlyOptimizedEKSBucket-${AWS::AccountId}-${AWS::Region}'
+
+  # Bucket Policy to Enforce HTTPS (Secure Data in Transit)
+  S3BucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref S3Bucket
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Sid: EnforceTLS
+            Effect: Deny
+            Principal: '*'
+            Action: 's3:*'
+            Resource:
+              - !Sub 'arn:aws:s3:::${S3Bucket}'
+              - !Sub 'arn:aws:s3:::${S3Bucket}/*'
+            Condition:
+              Bool:
+                'aws:SecureTransport': 'false'
+
+  # EKS Add-ons: CoreDNS, VPC CNI, and kube-proxy
+
+  # CoreDNS Addon
+  CoreDNSAddon:
+    Type: AWS::EKS::Addon
+    Properties:
+      AddonName: coredns
+      ClusterName: !Ref ClusterName
+      ResolveConflicts: OVERWRITE
+
+  # VPC CNI Addon
+  VPCCNIAddon:
+    Type: AWS::EKS::Addon
+    Properties:
+      AddonName: vpc-cni
+      ClusterName: !Ref ClusterName
+      ResolveConflicts: OVERWRITE
+
+  # kube-proxy Addon
+  KubeProxyAddon:
+    Type: AWS::EKS::Addon
+    Properties:
+      AddonName: kube-proxy
+      ClusterName: !Ref ClusterName
+      ResolveConflicts: OVERWRITE
+
+Outputs:
+  ClusterName:
+    Description: Name of the EKS cluster
+    Value: !Ref ClusterName
+
+  ClusterEndpoint:
+    Description: Endpoint of the EKS cluster (private)
+    Value: !GetAtt EKSCluster.Endpoint
+
+  ClusterVersion:
+    Description: Kubernetes version of the EKS cluster
+    Value: !GetAtt EKSCluster.Version
+
+  S3BucketName:
+    Description: Name of the S3 bucket
+    Value: !Ref S3Bucket
+
+  VpcId:
+    Description: "VPC ID of the environment."
+    Value: !Ref VPC
+
+  VpcCidrBlock:
+    Description: "IP block used in the VPC."
+    Value: !GetAtt VPC.CidrBlock
+
+  PublicSubnets:
+    Description: "Public subnet IDs."
+    Value:
+      Fn::Join:
+        - ","
+        - [!Ref PublicSubnet1, !Ref PublicSubnet2]
+
+  PrivateSubnets:
+    Description: "Private subnet IDs."
+    Value:
+      Fn::Join:
+        - ","
+        - [!Ref PrivateSubnet1, !Ref PrivateSubnet2]
+
+  NatGatewayId:
+    Description: "ID of the NAT Gateway"
+    Value: !Ref NatGateway
+
+  S3EndpointId:
+    Description: "ID of the S3 VPC Endpoint"
+    Value: !Ref S3VPCEndpoint
