--- a/02-cfn-corrected.yaml
+++ b/02-cfn-corrected.yaml
@@ -321,9 +321,8 @@ Resources:
         Statement:
           - Effect: Allow
             Principal:
-              Service:
-                - ec2.amazonaws.com
-              Action: 'sts:AssumeRole'
+              Service: 'ec2.amazonaws.com'
+            Action: 'sts:AssumeRole'
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
         - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
