--- a/01-cfn-vpc.yaml
+++ b/01-cfn-vpc.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: "CloudFormation template to create a VPC with public/private subnets, Internet Gateway, NAT Gateway, route tables, and an S3 endpoint for private subnets."
+Description: "CloudFormation template to create a VPC with public/private subnets, Internet Gateway, NAT Gateways in each AZ, route tables, and an S3 endpoint for private subnets."
 
 Parameters:
   VpcCidrBlock:
@@ -18,234 +18,217 @@ Parameters:
     Description: "Name of the VPC."
 
 Resources:
-# VPC Creation
-VPC:
-  Type: AWS::EC2::VPC
-  Properties:
-    CidrBlock: !Ref VpcCidrBlock
-    EnableDnsSupport: true
-    EnableDnsHostnames: true
-    Tags:
-      - Key: Name
-        Value: !Ref VpcName
+  # VPC Creation
+  VPC:
+    Type: AWS::EC2::VPC
+    Properties:
+      CidrBlock: !Ref VpcCidrBlock
+      EnableDnsSupport: true
+      EnableDnsHostnames: true
+      Tags:
+        - Key: Name
+          Value: !Ref VpcName
 
-# Internet Gateway
-InternetGateway:
-  Type: AWS::EC2::InternetGateway
-  Properties:
-    Tags:
-      - Key: Name
-        Value: !Sub "IGW_${VpcName}"
+  # Internet Gateway
+  InternetGateway:
+    Type: AWS::EC2::InternetGateway
+    Properties:
+      Tags:
+        - Key: Name
+          Value: !Sub "IGW_${VpcName}"
 
-AttachGateway:
-  Type: AWS::EC2::VPCGatewayAttachment
-  DependsOn:
-    - VPC
-    - InternetGateway
-  Properties:
-    VpcId: !Ref VPC
-    InternetGatewayId: !Ref InternetGateway
+  AttachGateway:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      VpcId: !Ref VPC
+      InternetGatewayId: !Ref InternetGateway
 
-# Public Subnets
-PublicSubnet1:
-  Type: AWS::EC2::Subnet
-  Properties:
-    VpcId: !Ref VPC
-    CidrBlock: !Select [0, !Cidr [!Ref VpcCidrBlock, 8, 8]]
-    MapPublicIpOnLaunch: true
-    AvailabilityZone: !Ref AvailabilityZone1
-    Tags:
-      - Key: Name
-        Value: "Public Subnet 1"
+  # Public Subnets
+  PublicSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties: 
+      VpcId: !Ref VPC
+      CidrBlock: !Select [0, !Cidr [!Ref VpcCidrBlock, 8,13]]
+      MapPublicIpOnLaunch: true
+      AvailabilityZone: us-east-1a
+      Tags:
+        - Key: Name
+          Value: "Workshop Public Subnet 1"
 
-PublicSubnet2:
-  Type: AWS::EC2::Subnet
-  Properties:
-    VpcId: !Ref VPC
-    CidrBlock: !Select [1, !Cidr [!Ref VpcCidrBlock, 8, 8]]
-    MapPublicIpOnLaunch: true
-    AvailabilityZone: !Ref AvailabilityZone2
-    Tags:
-      - Key: Name
-        Value: "Public Subnet 2"
+  PublicSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties: 
+      VpcId: !Ref VPC
+      CidrBlock: !Select [1, !Cidr [!Ref VpcCidrBlock, 8, 13]]
+      MapPublicIpOnLaunch: true
+      AvailabilityZone: us-east-1b
+      Tags:
+        - Key: Name
+          Value: "Workshop Public Subnet 2"
 
-# NAT Gateway Elastic IPs
-NatGatewayEIP1:
-  Type: AWS::EC2::EIP
-  Properties:
-    Domain: vpc
+  # NAT Gateway Elastic IPs
+  NatGatewayEIP1:
+    Type: AWS::EC2::EIP
+    Properties:
+      Domain: vpc
 
-NatGatewayEIP2:
-  Type: AWS::EC2::EIP
-  Properties:
-    Domain: vpc
+  NatGatewayEIP2:
+    Type: AWS::EC2::EIP
+    Properties:
+      Domain: vpc
 
-# NAT Gateways
-NatGateway1:
-  Type: AWS::EC2::NatGateway
-  DependsOn:
-    - NatGatewayEIP1
-    - PublicSubnet1
-  Properties:
-    AllocationId: !GetAtt NatGatewayEIP1.AllocationId
-    SubnetId: !Ref PublicSubnet1
-    Tags:
-      - Key: Name
-        Value: !Sub "NAT1_${VpcName}"
+  # NAT Gateways
+  NatGateway1:
+    Type: AWS::EC2::NatGateway
+    Properties:
+      AllocationId: !GetAtt NatGatewayEIP1.AllocationId
+      SubnetId: !Ref PublicSubnet1
+      Tags:
+        - Key: Name
+          Value: !Sub "NAT_${VpcName}_1"
 
-NatGateway2:
-  Type: AWS::EC2::NatGateway
-  DependsOn:
-    - NatGatewayEIP2
-    - PublicSubnet2
-  Properties:
-    AllocationId: !GetAtt NatGatewayEIP2.AllocationId
-    SubnetId: !Ref PublicSubnet2
-    Tags:
-      - Key: Name
-        Value: !Sub "NAT2_${VpcName}"
+  NatGateway2:
+    Type: AWS::EC2::NatGateway
+    Properties:
+      AllocationId: !GetAtt NatGatewayEIP2.AllocationId
+      SubnetId: !Ref PublicSubnet2
+      Tags:
+        - Key: Name
+          Value: !Sub "NAT_${VpcName}_2"
 
-# Private Subnets
-PrivateSubnet1:
-  Type: AWS::EC2::Subnet
-  Properties:
-    VpcId: !Ref VPC
-    CidrBlock: !Select [2, !Cidr [!Ref VpcCidrBlock, 8, 8]]
-    AvailabilityZone: !Ref AvailabilityZone1
-    Tags:
-      - Key: Name
-        Value: "Private Subnet 1"
+  # Private Subnets
+  PrivateSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties: 
+      VpcId: !Ref VPC
+      CidrBlock: !Select [2, !Cidr [!Ref VpcCidrBlock, 8, 13]]
+      AvailabilityZone: us-east-1a
+      Tags:
+        - Key: Name
+          Value: "Workshop Private Subnet 1"
 
-PrivateSubnet2:
-  Type: AWS::EC2::Subnet
-  Properties:
-    VpcId: !Ref VPC
-    CidrBlock: !Select [3, !Cidr [!Ref VpcCidrBlock, 8, 8]]
-    AvailabilityZone: !Ref AvailabilityZone2
-    Tags:
-      - Key: Name
-        Value: "Private Subnet 2"
+  PrivateSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties: 
+      VpcId: !Ref VPC
+      CidrBlock: !Select [3, !Cidr [!Ref VpcCidrBlock, 8, 13]]
+      AvailabilityZone: us-east-1b
+      Tags:
+        - Key: Name
+          Value: "Workshop Private Subnet 2"
 
-# Public Route Tables
-PublicRouteTable1:
-  Type: AWS::EC2::RouteTable
-  Properties:
-    VpcId: !Ref VPC
-    Tags:
-      - Key: Name
-        Value: !Sub "PublicRouteTable1_${VpcName}"
+  # Public Route Table
+  PublicRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref VPC
+      Tags:
+        - Key: Name
+          Value: !Sub "PublicRouteTable_${VpcName}"
 
-PublicRouteTable2:
-  Type: AWS::EC2::RouteTable
-  Properties:
-    VpcId: !Ref VPC
-    Tags:
-      - Key: Name
-        Value: !Sub "PublicRouteTable2_${VpcName}"
+  PublicRoute:
+    Type: AWS::EC2::Route
+    Properties:
+      RouteTableId: !Ref PublicRouteTable
+      DestinationCidrBlock: "0.0.0.0/0"
+      GatewayId: !Ref InternetGateway
 
-PublicRoute1:
-  Type: AWS::EC2::Route
-  DependsOn:
-    - AttachGateway
-    - PublicRouteTable1
-  Properties:
-    RouteTableId: !Ref PublicRouteTable1
-    DestinationCidrBlock: "0.0.0.0/0"
-    GatewayId: !Ref InternetGateway
+  PublicSubnetRouteTableAssociation1:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnet1
+      RouteTableId: !Ref PublicRouteTable
 
-PublicRoute2:
-  Type: AWS::EC2::Route
-  DependsOn:
-    - AttachGateway
-    - PublicRouteTable2
-  Properties:
-    RouteTableId: !Ref PublicRouteTable2
-    DestinationCidrBlock: "0.0.0.0/0"
-    GatewayId: !Ref InternetGateway
+  PublicSubnetRouteTableAssociation2:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnet2
+      RouteTableId: !Ref PublicRouteTable
 
-PublicSubnetRouteTableAssociation1:
-  Type: AWS::EC2::SubnetRouteTableAssociation
-  DependsOn:
-    - PublicSubnet1
-    - PublicRouteTable1
-  Properties:
-    SubnetId: !Ref PublicSubnet1
-    RouteTableId: !Ref PublicRouteTable1
+  # Private Route Tables
+  PrivateRouteTable1:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref VPC
+      Tags:
+        - Key: Name
+          Value: !Sub "PrivateRouteTable1_${VpcName}"
 
-PublicSubnetRouteTableAssociation2:
-  Type: AWS::EC2::SubnetRouteTableAssociation
-  DependsOn:
-    - PublicSubnet2
-    - PublicRouteTable2
-  Properties:
-    SubnetId: !Ref PublicSubnet2
-    RouteTableId: !Ref PublicRouteTable2
+  PrivateRouteTable2:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref VPC
+      Tags:
+        - Key: Name
+          Value: !Sub "PrivateRouteTable2_${VpcName}"
 
-# Private Route Tables
-PrivateRouteTable1:
-  Type: AWS::EC2::RouteTable
-  Properties:
-    VpcId: !Ref VPC
-    Tags:
-      - Key: Name
-        Value: !Sub "PrivateRouteTable1_${VpcName}"
+  PrivateRoute1:
+    Type: AWS::EC2::Route
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable1
+      DestinationCidrBlock: "0.0.0.0/0"
+      NatGatewayId: !Ref NatGateway1
 
-PrivateRouteTable2:
-  Type: AWS::EC2::RouteTable
-  Properties:
-    VpcId: !Ref VPC
-    Tags:
-      - Key: Name
-        Value: !Sub "PrivateRouteTable2_${VpcName}"
+  PrivateRoute2:
+    Type: AWS::EC2::Route
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable2
+      DestinationCidrBlock: "0.0.0.0/0"
+      NatGatewayId: !Ref NatGateway2
 
-PrivateRoute1:
-  Type: AWS::EC2::Route
-  DependsOn:
-    - NatGateway1
-    - PrivateRouteTable1
-  Properties:
-    RouteTableId: !Ref PrivateRouteTable1
-    DestinationCidrBlock: "0.0.0.0/0"
-    NatGatewayId: !Ref NatGateway1
+  PrivateSubnetRouteTableAssociation1:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnet1
+      RouteTableId: !Ref PrivateRouteTable1
 
-PrivateRoute2:
-  Type: AWS::EC2::Route
-  DependsOn:
-    - NatGateway2
-    - PrivateRouteTable2
-  Properties:
-    RouteTableId: !Ref PrivateRouteTable2
-    DestinationCidrBlock: "0.0.0.0/0"
-    NatGatewayId: !Ref NatGateway2
+  PrivateSubnetRouteTableAssociation2:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnet2
+      RouteTableId: !Ref PrivateRouteTable2
 
-PrivateSubnetRouteTableAssociation1:
-  Type: AWS::EC2::SubnetRouteTableAssociation
-  DependsOn:
-    - PrivateSubnet1
-    - PrivateRouteTable1
-  Properties:
-    SubnetId: !Ref PrivateSubnet1
-    RouteTableId: !Ref PrivateRouteTable1
+  # S3 VPC Endpoint for Private Subnets
+  S3VPCEndpoint:
+    Type: AWS::EC2::VPCEndpoint
+    Properties:
+      VpcId: !Ref VPC
+      ServiceName: !Sub "com.amazonaws.${AWS::Region}.s3"
+      RouteTableIds: 
+        - !Ref PrivateRouteTable1
+        - !Ref PrivateRouteTable2
+      VpcEndpointType: Gateway
 
-PrivateSubnetRouteTableAssociation2:
-  Type: AWS::EC2::SubnetRouteTableAssociation
-  DependsOn:
-    - PrivateSubnet2
-    - PrivateRouteTable2
-  Properties:
-    SubnetId: !Ref PrivateSubnet2
-    RouteTableId: !Ref PrivateRouteTable2
+Outputs:
+  VpcId:
+    Description: "VPC ID of the environment."
+    Value: !Ref VPC
 
-# S3 VPC Endpoint for Private Subnets
-S3VPCEndpoint:
-  Type: AWS::EC2::VPCEndpoint
-  DependsOn:
-    - PrivateRouteTable1
-    - PrivateRouteTable2
-  Properties:
-    VpcId: !Ref VPC
-    ServiceName: !Sub "com.amazonaws.${AWS::Region}.s3"
-    RouteTableIds:
-      - !Ref PrivateRouteTable1
-      - !Ref PrivateRouteTable2
-    VpcEndpointType: Gateway
+  VpcCidrBlock:
+    Description: "IP block used in the VPC."
+    Value: !GetAtt VPC.CidrBlock
+
+  PublicSubnets:
+    Description: "Public subnet IDs."
+    Value: 
+      Fn::Join:
+        - ","
+        - [!Ref PublicSubnet1, !Ref PublicSubnet2]
+
+  PrivateSubnets:
+    Description: "Private subnet IDs."
+    Value: 
+      Fn::Join:
+        - ","
+        - [!Ref PrivateSubnet1, !Ref PrivateSubnet2]
+
+  NatGatewayIds:
+    Description: "IDs of the NAT Gateways"
+    Value: 
+      Fn::Join:
+        - ","
+        - [!Ref NatGateway1, !Ref NatGateway2]
+
+  S3EndpointId:
+    Description: "ID of the S3 VPC Endpoint"
+    Value: !Ref S3VPCEndpoint
