--- a/02-cfn-corrected.yaml
+++ b/02-cfn-corrected.yaml
@@ -427,19 +427,18 @@ Resources:
       - NodeInstanceRole
     Properties:
       ClusterName: !Ref EKSCluster
-      NodegroupName: !Sub "${ClusterName}-nodegroup"
-      ScalingConfig:
-        MinSize: !Ref NodeGroupMinSize
-        DesiredSize: !Ref NodeGroupDesiredCapacity
-        MaxSize: !Ref NodeGroupMaxSize
-      Subnets:
-        - !Ref PrivateSubnet1
-        - !Ref PrivateSubnet2
       NodeRole: !GetAtt NodeInstanceRole.Arn
+      Subnets:
+        - !Ref PublicSubnet1
+        - !Ref PublicSubnet2
+      ScalingConfig:
+        DesiredSize: 1
+        MinSize: 1
+        MaxSize: 2
+      InstanceTypes:
+        - t3.medium
+      DiskSize: 20
       ReleaseVersion: !Ref AMI
-      CapacityType: ON_DEMAND
-      Tags:
-        Name: !Sub "${ClusterName}-nodegroup"
 
   # S3 Bucket for Data Storage (Simulate production environment)
   S3Bucket:
@@ -459,7 +458,7 @@ Resources:
         RestrictPublicBuckets: true
       Tags:
         - Key: Name
-          Value: !Sub "PoorlyOptimizedEKSBucket-${AWS::AccountId}-${AWS::Region}"
+          Value: !Sub "OptimizedEKSBucket-${AWS::AccountId}-${AWS::Region}"
 
   # Bucket Policy to Enforce HTTPS (Secure Data in Transit)
   S3BucketPolicy:
