--- a/02-cfn-corrected.yaml
+++ b/02-cfn-corrected.yaml
@@ -401,6 +401,8 @@ Resources:
         SubnetIds:
           - !Ref PrivateSubnet1
           - !Ref PrivateSubnet2
+          - !Ref PublicSubnet1
+          - !Ref PublicSubnet2
         SecurityGroupIds:
           - !Ref ClusterControlPlaneSecurityGroup
         EndpointPublicAccess: false # Control plane endpoint is private
